syntax = "proto3";

service BankService {
  rpc getBalance(BalanceCheckRequest) returns (Balance);
}

// request
message BalanceCheckRequest {
  int32 account_number = 1;
}

// response
message Balance {
  int32 amount = 1;
}